# parcel

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
docker/: Dockerfile  entrypoint.sh
docs/: ai-generation.md  architecture.md  index.html  module-authoring.md  style.css
docs/superpowers/plans/: 2026-04-23-phase-1-shell-foundation.md  2026-04-23-phase-2-auth-rbac.md  2026-04-23-phase-3-module-system.md  2026-04-23-phase-4-admin-ui.md  2026-04-23-phase-5-contacts-module.md  2026-04-23-phase-6-sdk-cli.md  2026-04-23-phase-7a-gate-sandbox.md  2026-04-23-phase-7b-claude-generator.md  2026-04-24-phase-7c-chat-ui.md  2026-04-24-phase-8-dashboards.md  2026-04-25-phase-10a-workflows.md  2026-04-25-phase-10b-retry.md  2026-04-25-phase-10b-workflows-cron-arq.md  2026-04-25-phase-9-reports.md  2026-04-26-phase-11-sandbox-preview-enrichment.md  2026-04-27-phase-12-ai-generator-feature-awareness.md
docs/superpowers/specs/: 2026-04-23-phase-1-shell-foundation-design.md  2026-04-23-phase-2-auth-rbac-design.md  2026-04-23-phase-3-module-system-design.md  2026-04-23-phase-4-admin-ui-design.md  2026-04-23-phase-5-contacts-module-design.md  2026-04-23-phase-6-sdk-cli-design.md  2026-04-23-phase-7a-gate-sandbox-design.md  2026-04-23-phase-7b-claude-generator-design.md  2026-04-24-phase-7c-chat-ui-design.md  2026-04-24-phase-8-dashboards-design.md  2026-04-24-phase-9-reports-design.md  2026-04-25-phase-10a-workflows-design.md  2026-04-25-phase-10b-retry-design.md  2026-04-25-phase-10b-workflows-cron-arq-design.md  2026-04-25-phase-10c-rich-actions-design.md  2026-04-26-phase-11-sandbox-preview-enrichment-design.md  2026-04-27-phase-12-ai-generator-feature-awareness-design.md
docs/tutorial/: 01-foundations.html  02-scaffold.html  03-data.html  04-http.html  05-rbac-sidebar.html  06-testing.html  07-install.html  08-ai.html  index.html
modules/contacts/: README.md  pyproject.toml
modules/contacts/src/parcel_mod_contacts/: __init__.py  alembic.ini  dashboards.py  models.py  router.py  seed.py  service.py  sidebar.py  workflows.py
modules/contacts/src/parcel_mod_contacts/alembic/: env.py
modules/contacts/src/parcel_mod_contacts/alembic/versions/: 0001_create_contact_company.py  0002_add_welcomed_at.py
modules/contacts/src/parcel_mod_contacts/reports/: __init__.py  directory.py
modules/contacts/src/parcel_mod_contacts/templates/companies/: detail.html  list.html  list_rows.html  new.html
modules/contacts/src/parcel_mod_contacts/templates/contacts/: detail.html  list.html  list_rows.html  new.html
modules/contacts/src/parcel_mod_contacts/templates/reports/: directory.html
modules/contacts/tests/: conftest.py  test_contacts_dashboard.py  test_contacts_migrations.py  test_contacts_report_directory.py  test_contacts_router.py  test_contacts_service.py  test_contacts_workflow_daily.py
scripts/: bootstrap.py
