[project]
name = "parcel-mod-contacts"
version = "0.4.0"
description = "Parcel demo module — Contacts / CRM lite"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "parcel-sdk",
    "fastapi>=0.115",
]

[project.entry-points."parcel.modules"]
contacts = "parcel_mod_contacts:module"

[dependency-groups]
dev = ["parcel-shell"]

[tool.uv.sources]
parcel-sdk = { workspace = true }
parcel-shell = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parcel_mod_contacts"]
